syntax = "proto3";

package zerofs.admin;

import "google/protobuf/timestamp.proto";

service AdminService {
    rpc CreateCheckpoint(CreateCheckpointRequest) returns (CreateCheckpointResponse);

    rpc ListCheckpoints(ListCheckpointsRequest) returns (ListCheckpointsResponse);

    rpc DeleteCheckpoint(DeleteCheckpointRequest) returns (DeleteCheckpointResponse);

    rpc GetCheckpointInfo(GetCheckpointInfoRequest) returns (GetCheckpointInfoResponse);

    rpc WatchFileAccess(WatchFileAccessRequest) returns (stream FileAccessEvent);

    // Subvolume operations
    rpc CreateSubvolume(CreateSubvolumeRequest) returns (CreateSubvolumeResponse);

    rpc ListSubvolumes(ListSubvolumesRequest) returns (ListSubvolumesResponse);

    rpc DeleteSubvolume(DeleteSubvolumeRequest) returns (DeleteSubvolumeResponse);

    rpc GetSubvolumeInfo(GetSubvolumeInfoRequest) returns (GetSubvolumeInfoResponse);

    rpc SetDefaultSubvolume(SetDefaultSubvolumeRequest) returns (SetDefaultSubvolumeResponse);

    rpc GetDefaultSubvolume(GetDefaultSubvolumeRequest) returns (GetDefaultSubvolumeResponse);

    // Snapshot operations
    rpc CreateSnapshot(CreateSnapshotRequest) returns (CreateSnapshotResponse);

    rpc ListSnapshots(ListSnapshotsRequest) returns (ListSnapshotsResponse);

    rpc DeleteSnapshot(DeleteSnapshotRequest) returns (DeleteSnapshotResponse);
    
    // Snapshot file operations
    rpc ReadSnapshotFile(ReadSnapshotFileRequest) returns (stream FileChunk);
}

message CheckpointInfo {
    // UUID as string
    string id = 1;
    string name = 2;
    google.protobuf.Timestamp created_at = 3;
}

message CreateCheckpointRequest {
    string name = 1;
}

message CreateCheckpointResponse {
    CheckpointInfo checkpoint = 1;
}

message ListCheckpointsRequest {}

message ListCheckpointsResponse {
    repeated CheckpointInfo checkpoints = 1;
}

message DeleteCheckpointRequest {
    string name = 1;
}

message DeleteCheckpointResponse {}

message GetCheckpointInfoRequest {
    string name = 1;
}

message GetCheckpointInfoResponse {
    CheckpointInfo checkpoint = 1;
}

message WatchFileAccessRequest {}

message FileAccessEvent {
    google.protobuf.Timestamp timestamp = 1;
    FileOperation operation = 2;
    string path = 3;
    OperationParams params = 4;
}

enum FileOperation {
    READ = 0;
    WRITE = 1;
    CREATE = 2;
    REMOVE = 3;
    RENAME = 4;
    MKDIR = 5;
    READDIR = 6;
    LOOKUP = 7;
    SETATTR = 8;
    LINK = 9;
    SYMLINK = 10;
    MKNOD = 11;
    TRIM = 12;
}

message OperationParams {
    optional uint64 offset = 1;
    optional uint64 length = 2;
    optional uint32 mode = 3;
    optional string new_path = 4;
    optional string link_target = 5;
    optional string filename = 6;
}

// Subvolume messages
message SubvolumeInfo {
    uint64 id = 1;
    string name = 2;
    string uuid = 3;
    optional uint64 parent_id = 4;
    optional string parent_uuid = 5;
    uint64 root_inode = 6;
    uint64 created_at = 7;
    bool is_readonly = 8;
    bool is_snapshot = 9;
    uint64 generation = 10;
    uint64 flags = 11;
}

message CreateSubvolumeRequest {
    string name = 1;
}

message CreateSubvolumeResponse {
    SubvolumeInfo subvolume = 1;
}

message ListSubvolumesRequest {}

message ListSubvolumesResponse {
    repeated SubvolumeInfo subvolumes = 1;
}

message DeleteSubvolumeRequest {
    string name = 1;
}

message DeleteSubvolumeResponse {}

message GetSubvolumeInfoRequest {
    string name = 1;
}

message GetSubvolumeInfoResponse {
    SubvolumeInfo subvolume = 1;
}

message SetDefaultSubvolumeRequest {
    string name = 1;
}

message SetDefaultSubvolumeResponse {}

message GetDefaultSubvolumeRequest {}

message GetDefaultSubvolumeResponse {
    uint64 subvolume_id = 1;
}

// Snapshot messages
message CreateSnapshotRequest {
    string source_name = 1;
    string snapshot_name = 2;
    optional bool readonly = 3; // If true, create read-only snapshot. Defaults to false (read-write, like btrfs)
}

message CreateSnapshotResponse {
    SubvolumeInfo snapshot = 1;
}

message ListSnapshotsRequest {}

message ListSnapshotsResponse {
    repeated SubvolumeInfo snapshots = 1;
}

message DeleteSnapshotRequest {
    string name = 1;
}

message DeleteSnapshotResponse {}

// Snapshot file reading
message ReadSnapshotFileRequest {
    string snapshot_name = 1;
    string file_path = 2;  // Path within snapshot (e.g., /mnt/my-volume/file.txt)
}

message FileChunk {
    bytes data = 1;
    uint64 offset = 2;
    uint64 total_size = 3;
}
